== Release 0.7.3 [2022-10-03]

- Fix bug preventing specifying a device with libusb0
- Fix bug in order device id was printed with libusb0
- Publish binaries for Windows for libusb1
- Enable GitHub Actions

== Release 0.7.2 [2015-02-04]

- Fix memory bounds used for XMega targets.

== Release 0.7.1 [2015-01-03]

- Fix use of mandatory filename ChangeLog in distribution tarball
- Fix infinite loop in rpl_malloc
- Add experimental support for autocomplete on Ubuntu
- Fix exit status of help-related options and improve start sequence

== Release 0.7.0 [2014-08-02]

- Add support for atmega16c4 and atmega32c4
- Fix device erase for bootloaders which return busy status
- Better include file defaults for libusb when run bootstrap is run without pkgconfig.
- Improved status output
- Add hex dump commands
- Add blank memory check
- Major rework of the flash/user/eeprom code
- Replace start and reset commands with launch
- Repository and website migrated to GitHub

== Release 0.6.2 [2013-07-19]

- Use correct default libusb-1.0 path
- Workaround for "Device not found" errors

== Release 0.6.1 [2013-04-04]

- Added support for specifying a USB bus and address
- Added support for device serialization
- Fix packaging problem which failed to supply the default path
  for libusb-1.0 files when built on a machine without that package.
- Clarified some error messages

== Release 0.6.0 [2013-01-29]

- Added support for xmega chips currently supported by FLIP
- Do not attempt eeprom operations on devices without eeprom
- Allow setting the security bit on AVR32
- Add HTML help file for Windows users
- Added new commands --version, --help, --targets
- Improved built in help text
- Improved several error messages

== Release 0.5.5 [2012-12-22]

- Added support for atmega16u2
- Fixed operation of reset command
- More reliable autoconf operation
- Better support for Windows users
- Fixed erase timeout for AVR32

== Release 0.5.4 [2011-09-22]
